Cabal-Version: 3.0
Name:          PhyloLib
Version:       1.0.0
Stability:     Stable
Build-Type:    Simple

Author:        Ward Wheeler <wheeler@amnh.org>
Copyright:     (c) 2015-2022 Ward Wheeler
License:       BSD-3-Clause
License-File:  LICENSE

Maintainer:    Ward Wheeler <wheeler@amnh.org>
Homepage:      https://github.com/wardwheeler/PhyGraph#readme
Bug-Reports:   https://github.com/wardwheeler/PhyGraph/issues


library

  default-language:
    Haskell2010

  hs-source-dirs:
    src

  build-depends:
    base                     >= 4.11      && < 5.0,
    bv-little                >= 1.2,
    bytestring               >= 0.10.10   && < 0.13,
    deepseq                  >= 1.4       && < 2.0,
    directory                >= 1.3.6     && < 2.0,
    fgl,
    filepath                 >= 1.4.2     && < 2.0,
    process                  >= 1.6       && < 2.0,
    time,
    tasty                    >= 1.2       && < 2.0,
    tasty-golden             >= 2.3       && < 3.0,
    tasty-rerun              >= 1.1.14    && < 2.0,
                containers >=0.6
                , graphviz   >=2999.20
                , fgl
                , text
                , parallel
                , deepseq
                , bv
                -- , exceptions
                , array
                , split
                , text-short
                , random
                , hashable
                , time
                , vector
                , sort
                -- , unboxing-vector
                , MissingH >= 1.4.3
                , bv-little
                -- , bits
                -- , hashmap
                , bimap
                , logfloat
                , random-shuffle
                
               -- currently doesn't compile but could be useful
               -- lots of good functions
               -- , Graphalyze
               , async
               , process
               , directory

  exposed-modules:
--    Bio.BinaryRenderingTree
    Cyclic
    GeneralUtilities
    GraphFormatUtilities
    LocalSequence
    SymMatrixSeq
    ParallelUtilities
    SymMatrix
