Cabal-Version: 3.8
Name:          PhyloLib
Version:       0.1.0
Stability:     Alpha
Build-Type:    Simple
Tested-With:
  GHC == 9.2.4

Author:        Ward Wheeler <wheeler@amnh.org>
Copyright:     (c) 2015-2022 Ward Wheeler
License:       BSD-3-Clause
License-File:  LICENSE

Maintainer:    Ward Wheeler <wheeler@amnh.org>
Homepage:      https://github.com/wardwheeler/PhyGraph#readme
Bug-Reports:   https://github.com/wardwheeler/PhyGraph/issues

Extra-Doc-Files:
  CHANGELOG.md
  README.md


library

  default-language:
    Haskell2010

  hs-source-dirs:
    src

  build-depends:
    array                    >= 0.5.4     && < 0.6,
    base                     >= 4.11      && < 5.0,
    bv                       >= 0.5       && < 1.0,
    bv-little                >= 1.2       && < 2.0,
    containers               >= 0.6.2     && < 1.0,
    deepseq                  >= 1.4       && < 2.0,
    fgl                      >= 5.8       && < 6.0,
    graphviz                 >= 2999.20   && < 3000,
    parallel                 >= 3.2       && < 4.0,
    random                   >= 1.2       && < 2.0,
    sort                     >= 1.0       && < 2.0,
    text                     >= 1.2       && < 3.0,
    time                     >= 1.12      && < 2.0,
    vector                   >= 0.12.0.3  && < 0.13,

  exposed-modules:
    Cyclic
    GeneralUtilities
    GraphFormatUtilities
    LocalSequence
    ParallelUtilities
    SymMatrix
    SymMatrixSeq

flag test-osx
  Description: Apply extremely agressive and extremely time consuming optimization but no llvm
   Default:     False
   Manual:      True

GHC-Options:
      -feager-blackholing
      -O2
      -Wall
      -Wno-all-missed-specialisations
      -Wno-implicit-prelude
      -Wno-missing-import-lists
      -Wno-missing-kind-signatures
      -Wno-missing-safe-haskell-mode
      -Wno-monomorphism-restriction
      -Wno-type-defaults
      -Wno-unsafe
      -fexcess-precision
      -fexpose-all-unfoldings
      -flate-specialise
      -fmax-simplifier-iterations=16
      -foptimal-applicative-do
      -fspec-constr-count=8
      -fspec-constr-keen
      -fspecialize-aggressively
      -fstatic-argument-transformation

if flag(test-osx)
    GHC-Options:
      -- -fllvm

else
  ghc-options:
    -- Sanity check warnings:
    --   1. Fail on a warning
    --   2. Include all warnings by default
    --   3. Exclude the undesirable warnings
    -- -Werror
    -Weverything
    -- Exclusions:
    -feager-blackholing
    -O2
    -Wall
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-type-defaults
    -Wno-unsafe
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -fmax-simplifier-iterations=16
    -foptimal-applicative-do
    -fspec-constr-count=8
    -fspec-constr-keen
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- -fllvm


